components/themes/VaporWave/VaporWave.module.css
/* ... */
.mountain:after {
    content: '';
    border-left: calc(var(--mountain-base) / 2) solid transparent;
    border-bottom: var(--mountain-height, 100px) solid
        var(--mountain-color2, black);
    border-top: 0px solid transparent;
    border-right: calc(var(--mountain-base, 100px) / 2) solid transparent;
    transform: translate(-50%) scale(0.98);
    position: absolute;
    left: 0;
    top: 0;
}

.overlay {
    width: 100%;
    height: 100%;
    z-index: 99999;
    position: absolute;
    left: 0;
    top: 0;
    background-image: repeating-linear-gradient(
        rgba(0, 0, 0, 0.3) 0,
        transparent 1px,
        transparent 2px,
        rgba(0, 0, 0, 0.3) 3px
    );
    pointer-events: none;
}

.background80s {
    background: linear-gradient(
            to bottom,
            #010310 0,
            #0c1142 24%,
            #45125e 45%,
            #d53567 50%,
            #f0c3d9 59.5%,
            #0c1142 59.5%
        )
        fixed;
    background-size: 100% var(--background-height, 100vh);
    overflow: hidden;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: var(--background-height, 100vh);
    z-index: 1;
}

.animatedClouds:before {
    filter: url(#filter);
}

.background80s:before {
    content: '';

    width: 100%;
    height: 55%;
    position: absolute;
    z-index: 1;
    left: 0;
    top: 0;
    opacity: 0.2;
}

/*stars*/
.stars:after {
    transform: translateY(-40%);
    content: ' ';
    border-radius: 100%;
    width: 3px;
    height: 4px;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 2;
    box-shadow: 5vw 15vh 2px white, 1vw 33vh 0px white, 2vw 25vh 2px white,
        10vw 10vh 2px white, 12vw 20vh 0px white, 30vw 15vh 2px white,
        16vw 5vh 2px white, 24vw 10vh 0px white, 32vw 40vh 0px white,
        33vw 35vh 2px white, 12vw 38vh 2px white, 24vw 10vh 0px white,
        33vw 5vh 2px white, 20vw 10vh 0px white, 80vw 10vh 2px white,
        62vw 20vh 0px white, 60vw 15vh 2px white, 70vw 7vh 0px white,
        62vw 50vh 0px white, 65vw 35vh 2px white, 64vw 10vh 0px white,
        85vw 2vh 0px white, 92vw 40vh 0px white, 75vw 35vh 2px white,
        90vw 10vh 0px white;
    opacity: 0.3;
    animation: glitter 2s infinite;
}

@keyframes glitter {
    0% {
        opacity: 0.5;
    }
    50% {
        opacity: 0.9;
    }

    100% {
        opacity: 0.5;
    }
}

.text {
    position: absolute;
    left: 50%;
    top: 50%;
    text-align: center;
    transform: translate(-50%, -50%);
    white-space: nowrap;
}

.glow {
    color: #3c57d6;
    text-align: center;
    -webkit-animation: glowAnimation 1s ease-in-out infinite alternate;
    -moz-animation: glowAnimation 1s ease-in-out infinite alternate;
    animation: glowAnimation 1s ease-in-out infinite alternate;
    z-index: 999;
}

@keyframes glowAnimation {
    from {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073,
            0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073,
            0 0 70px #e60073;
    }
    to {
        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
            0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6,
            0 0 80px #ff4da6;
    }
}

.chrome {
    font-family: 'Zen Dots', cursive;

    font-weight: 900;

    background-image: linear-gradient(
        #2989cc 0%,
        #d3e5ec 50%,
        #592451 51%,
        #b3628d 55%,
        #592451 59%,
        #b3628d 65%,
        #ac86a6 75%,
        #b3628d 100%
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 3px;
    -webkit-text-stroke-color: rgba(0, 0, 0, 1);
    position: relative;
}

.chrome:before {
    content: attr(data-text);

    text-shadow: -1px -1px 1px #2989cc, -2px -2px 1px #2989cc,
        -3px -3px 1px #2989cc, 1px 1px 1px #000, 0px -1px 2px #000,
        -1px -2px 2px #000, 0 0 5px rgba(255, 255, 255, 1);
    opacity: 1;
    position: absolute;
    z-index: -1;
}

.shine:after {
    content: attr(data-text);
    background-image: linear-gradient(
        225deg,
        transparent 53%,
        white 55%,
        transparent 58%
    );

    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    -webkit-background-clip: text;
    z-index: 999;
    background-size: 400% 400%;
    animation: shine 10s ease infinite;
    animation-delay: var(--shine-delay, 0s);
}

@keyframes shine {
    0% {
        background-position: 0% 51%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 51%;
    }
}
/* ... */

